--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 /node_modules
+build/asset-manifest.json
+build/favicon.ico
+build/index.html
+build/logo192.png
+build/logo512.png
+build/manifest.json
+build/precache-manifest.e0565f5d4c2ebc1830aa3500f46fedf1.js
+build/robots.txt
+build/service-worker.js
+build/static/css/main.a8adc0aa.chunk.css
+build/static/css/main.a8adc0aa.chunk.css.map
+build/static/js/2.e989a032.chunk.js
+build/static/js/2.e989a032.chunk.js.LICENSE.txt
+build/static/js/2.e989a032.chunk.js.map
+build/static/js/main.ac32b02e.chunk.js
+build/static/js/main.ac32b02e.chunk.js.map
+build/static/js/runtime-main.cad2001f.js
+build/static/js/runtime-main.cad2001f.js.map
+build/static/media/logo.5d5d9eef.svg
